# libnmath

./: .gitignore  CMakeLists.txt  NMATH2_DEV_LOG.docx  Test.xlsx  app_layout.psd  complex.c  complex.h  data.txt  graphutil.c  graphutil.h  mustread.txt  nmath.class.violet.html  nmath.docx  nmath.uml  readch.c
FPlotter/FPlotter/: Camera.cpp  Camera.h  ConsolePaneController.cpp  ConsolePaneController.h  ConsoleView.cpp  ConsoleView.h  Controls.h  NewFunctionDlgCtrl.cpp  NewFunctionDlgCtrl.h  controller.cpp  controller.h  controllermain.cpp  controllermain.h  dialogwindow.cpp  dialogwindow.h  functionmodel.cpp  functionmodel.h  glcontroller.cpp  glcontroller.h  modelgl.cpp  modelgl.h  plotter.cpp  plotter.rc  procedure.cpp  procedure.h  utility.cpp  viewgl.cpp  viewgl.h  window.cpp  window.h
FunctionPlotter/: FunctionPlotter.sln
FunctionPlotter/Debug/: FunctionPlotter.ilk
FunctionPlotter/FunctionPlotter/: ConsolePaneController.cpp  ConsolePaneController.h  FunctionPlotter.vcxproj  FunctionPlotter.vcxproj.filters  controller.cpp  dialogwindow.cpp  dialogwindow.h  errorconst.h  fplotter.h  functionmodel.h  glcontroller.cpp  glcontroller.h  modelgl.cpp  modelgl.h  plotter.cpp  plotter.rc  procedure.cpp  procedure.h  resource.h  utility.cpp  viewgl.cpp  viewgl.h  window.cpp  window.h
Plotter/: makefile  makefile.mak  plotter.cpp  utility.cpp
Plotter/FPlotter/: FPlotter.sln
TankGame/: TankGame.sln
TankGame/Debug/: TankGame.exp  TankGame.ilk  TankGame.lib
TankGame/TankGame/: BattleObject.cpp  BattleObject.h  HeightMap.cpp  HeightMap.h  StaticObject.cpp  StaticObject.h  Tank.cpp  Tank.h  TankGame.vcxproj  TankGame.vcxproj.filters  gamecontroller.cpp  gamecontroller.h  gamemodel.cpp  gamemodel.h  gameview.cpp  gameview.h  tankgame.cpp
algorithms/: binaryheap.cpp  binomialheap.hpp  binomialtree.hpp  btree.h  cbinarytree.cpp  dijkstra.cpp  fiboheap.cpp  heapsort.cpp  pqdijkstra.cpp  searchstring.cpp  selsearch.cpp  test.cpp  test_dijkstra.cpp
buildcmake/: CMakeLists.txt
cpp/: common.cpp  common.h  criteria.cpp  criteria.h  fp128.h  makefile  nfunction.cpp  nfunction.h  nlablexer.cpp  nlabparser.cpp  nlabparser.h  nmath.cpp  nmath.h  test.cpp  utf8.h
cpp/criteria/: SimpleCriteria.cpp  SimpleCriteria.h  combinedcriteria.cpp  combinedcriteria.h  compositecriteria.cpp  compositecriteria.h  criteria.cpp  criteria.h
cpp2/: SimpleCriteria.cpp  SimpleCriteria.h  StackUtil.cpp  StackUtil.h  StringUtil.cpp  StringUtil.h  TestNMath.cpp  combinedcriteria.cpp  combinedcriteria.h  common.cpp  common.h  complex.cpp  complex.h  compositecriteria.cpp  compositecriteria.h  criteria.cpp  criteria.h  fp128.cpp  fp128.h  fraction.cpp  fraction.h  nfunction.cpp  nfunction.h  nlablexer.cpp  nlablexer.h  nlabparser.cpp  nlabparser.h  nmath.cpp  nmath.h  nmath_pool.cpp  utf8.cpp  utf8.h
glutils/: graphutil.cpp  graphutil.h  shader.cpp  shader.h  vbo.h  vbo_mapper.cpp  vbo_mapper.h
gm/: fmat4.hpp  gm.hpp  inverse.txt  vec3.hpp  vec4.hpp
include/: Equation.hpp  SimpleCriteria.hpp  StackUtil.h  StringUtil.h  calculus.hpp  calculus_no_thread.hpp  colorutil.h  common.hpp  common_data.h  complex.hpp  compositecriteria.hpp  criteria.hpp  fp128.h  fraction.h  imagedata.hpp  internal_common.h  logging.h  matrix.hpp  nfunction.hpp  nlablexer.h  nlabparser.hpp  nmath_pool.hpp  nmathutil.h  utf8.h
linux/: common.c  common.h  criteria.c  criteria.h  derivative.c  derivative.h  funct.c  funct.h  interval.c  interval.h  makefile  nlablexer.c  nlablexer.h  nlabparser.c  nlabparser.h  nlabparser2.c  nlabparser2.h  nmath.c  nmath.h  nmbase.c  nmbase.h  test  test.c  testlib.h  utf8.c
src/: SimpleCriteria.cpp  StackUtil.cpp  StringUtil.cpp  StringUtil.h  colorutil.cpp  common.cpp  complex.cpp  compositecriteria.cpp  criteria.cpp  fraction.cpp  internal_common.cpp  logging.cpp  nfunction.cpp  nlablexer.cpp  nlabparser.cpp  nmath.cpp  nmath_pool.h  nmathutil.c  utf8.cpp
tank/docs/: tank.mdj
tank/src/: BattleObject.h  gamecontroller.cpp  gamecontroller.h  gamemodel.cpp  gamemodel.h  gameview.cpp  gameview.h  tankgame.cpp
test/: A.hpp  B.hpp  Test.java  TestNMath.cpp  criteria.txt  fp128.cpp  fragment.shader  jni-base.h  makefile  plotf.m  plots.m  rot_quat.cpp  shader.cpp  shader.h  test-jni.c  test.c  test.cpp  test.cpp~  test.h  testFunction.cpp  testImageData.cpp  testNLabLexer.cpp  testglm.cpp  vbo.h  vbo_mapper.cpp  vbo_mapper.h  vertex.shader
test/shaders/: fragment.shader  fragment_test.shader  vertex.shader  (+1 more)
web/: index.php  nmath.js  test.html
windows/: build.cmd  common.c  common.h  derivative.c  derivative.h  funct.c  funct.h  makefile  nlablexer.c  nlablexer.h  nlabparser.c  nlabparser.h  nlabparser2.c  nlabparser2.h  nmath.c  nmath.h  test.c  test2.c  testlib.h
(+72 files in other folders)
